<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logic NN Tutorial</string>
    <string name="menu_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="about_desc">Developed by creativeongreen.com\nReleased under the GPL v3 or later</string>
    <string name="test_results">Results</string>
    <string name="example_xor">XOR</string>
    <string name="example_and">AND</string>
    <string name="example_or">OR</string>
    <string name="test_with_noise">Test with Noise</string>
    <string name="start_training">Start Training</string>
    <string name="training_finished">Training Finished</string>
    <string name="param_summary_num_hidden_neurons">Adjust number of hidden neurons</string>
    <string name="param_title_num_hidden_neurons">Number of Hidden Neurons:</string>
    <string name="param_summary_learning_rate">Adjust learning rate</string>
    <string name="param_title_learning_rate">Learning Rate:</string>
    <string name="param_summary_momentum">Adjust momentum</string>
    <string name="param_title_momentum">Momentum:</string>
    <string name="param_summary_global_error">Adjust global error: 10E-</string>
    <string name="param_title_global_error">Global Error 10E-</string>
    <string name="param_summary_max_epoch">Set max. epoch</string>
    <string name="param_title_max_epoch">Max. Epoch:</string>
    <string name="param_summary_noise_degree">Adjust noise degree</string>
    <string name="param_title_noise_degree">Input Data Noise Degree:</string>

</resources>