<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/abc_action_bar_default_padding_material"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/ll_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material" >

        <Button
            android:id="@+id/button_train_1"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:onClick="onClickStartTraining1"
            android:text="@string/example_xor" />

        <Button
            android:id="@+id/button_train_2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/button_train_1"
            android:onClick="onClickStartTraining2"
            android:text="@string/example_and" />

        <Button
            android:id="@+id/button_train_3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_toRightOf="@id/button_train_2"
            android:onClick="onClickStartTraining3"
            android:text="@string/example_or" />

        <Button
            android:id="@+id/button_test_with_noise"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_below="@id/button_train_1"
            android:layout_centerInParent="true"
            android:onClick="onClickTestWithNoise"
            android:text="@string/test_with_noise" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_view_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_1"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material" >

        <TextView
            android:id="@+id/test_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/animated_on_processing"
        android:visibility="gone" />

</RelativeLayout>